cmake_minimum_required(VERSION 2.8)

file(GLOB WNTRDATA_ONTOLOGY_SOURCES "*.cpp")
file(GLOB WNTRDATA_ONTOLOGY_HEADERS "*.hpp")

list(APPEND WNTRDATA_SOURCES ${WNTRDATA_ONTOLOGY_SOURCES})

## Installs
install(FILES ${WNTRDATA_ONTOLOGY_HEADERS}
    DESTINATION "${WNTRDATA_INCLUDE_DIR}/ontology"
    COMPONENT dev)
